packages/kauri-admin/k8s/kauri-admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kauri-admin
  labels:
    app: kauri-admin
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: kauri-admin
